--- a/edge_patch/manifest.json
+++ b/edge_patch/manifest.json
@@ -1,5 +1,9 @@
 {
     "author": "asdi998",
+    "background": {
+        "page": "background.html",
+        "persistent": true
+    },
     "browser_action": {
         "default_icon": {
             "19": "icon.png"
@@ -12,8 +16,6 @@
             "matches": [
                 "http://202.116.0.172:8083/",
                 "http://202.116.0.172:8083/Login.aspx",
-                "http://202.116.0.163/",
-                "http://202.116.0.163/Login.aspx",
                 "https://jwxt.jnu.edu.cn/",
                 "https://jwxt.jnu.edu.cn/Login.aspx"
             ],
@@ -24,7 +26,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/IndexPage.aspx",
-                "http://202.116.0.163/IndexPage.aspx",
                 "https://jwxt.jnu.edu.cn/IndexPage.aspx"
             ],
             "js": [
@@ -34,7 +35,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/Secure/PaiKeXuanKe/wfrm_XK_XuanKe.aspx",
-                "http://202.116.0.163/Secure/PaiKeXuanKe/wfrm_XK_XuanKe.aspx",
                 "https://jwxt.jnu.edu.cn/Secure/PaiKeXuanKe/wfrm_XK_XuanKe.aspx"
             ],
             "js": [
@@ -45,7 +45,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/Secure/PaiKeXuanKe/wfrm_Pk_RlRscx.aspx",
-                "http://202.116.0.163/Secure/PaiKeXuanKe/wfrm_Pk_RlRscx.aspx",
                 "https://jwxt.jnu.edu.cn/Secure/PaiKeXuanKe/wfrm_Pk_RlRscx.aspx"
             ],
             "js": [
@@ -56,7 +55,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/Secure/PaiKeXuanKe/wfrm_Pk_Ggxxk.aspx",
-                "http://202.116.0.163/Secure/PaiKeXuanKe/wfrm_Pk_Ggxxk.aspx",
                 "https://jwxt.jnu.edu.cn/Secure/PaiKeXuanKe/wfrm_Pk_Ggxxk.aspx"
             ],
             "js": [
@@ -67,7 +65,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/areaLeft.aspx",
-                "http://202.116.0.163/areaLeft.aspx",
                 "https://jwxt.jnu.edu.cn/areaLeft.aspx"
             ],
             "js": [
@@ -78,7 +75,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/Secure/PaiKeXuanKe/wfrm_Xk_ReadMeCn.aspx",
-                "http://202.116.0.163/Secure/PaiKeXuanKe/wfrm_Xk_ReadMeCn.aspx",
                 "https://jwxt.jnu.edu.cn/Secure/PaiKeXuanKe/wfrm_Xk_ReadMeCn.aspx"
             ],
             "js": [
@@ -89,7 +85,6 @@
         {
             "matches": [
                 "http://202.116.0.172:8083/areaMain.aspx",
-                "http://202.116.0.163/areaMain.aspx",
                 "https://jwxt.jnu.edu.cn/areaMain.aspx"
             ],
             "js": [
@@ -101,7 +96,12 @@
     "description": "暨南大学教务系统辅助插件，作者：asdi998",
     "manifest_version": 2,
     "name": "暨大选课辅助",
-    "version": "0.21",
+    "permissions": [
+        "storage",
+        "*://202.116.0.172/*",
+        "*://jwxt.jnu.edu.cn/*"
+    ],
+    "version": "0.29",
     "-ms-preload": {
         "backgroundScript": "backgroundScriptsAPIBridge.js",
         "contentScript": "contentScriptsAPIBridge.js"
